资源文件路径

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         .w_btn{display: block;top: 225px;height: 60px;}
     </style>
     
-    <script src="lib/easeljs-0.7.1.min.js"></script>
-    <script src="lib/tweenjs-0.5.1.min.js"></script>
-    <script src="lib/preloadjs-0.4.1.min.js"></script>
-    <script src="lib/movieclip-0.7.1.min.js"></script>
-    <script src="lib/soundjs-0.5.2.min.js"></script>
+    <script src="/static/lib/easeljs-0.7.1.min.js"></script>
+    <script src="/static/lib/tweenjs-0.5.1.min.js"></script>
+    <script src="/static/lib/preloadjs-0.4.1.min.js"></script>
+    <script src="/static/lib/movieclip-0.7.1.min.js"></script>
+    <script src="/static/lib/soundjs-0.5.2.min.js"></script>
 
-    <script src="common/common.js"></script>
-    <script src="src/app.js"></script>
-    <script src="src/loadingContent.js"></script>
-    <script src="src/screenContent.js"></script>
-    <script src="src/parameters.js"></script>
-    <script src="loading.js"></script>
-    <script src="main.js"></script>
+    <script src="/static/common/common.js"></script>
+    <script src="/static/src/app.js"></script>
+    <script src="/static/src/loadingContent.js"></script>
+    <script src="/static/src/screenContent.js"></script>
+    <script src="/static/src/parameters.js"></script>
+    <script src="/static/loading.js"></script>
+    <script src="/static/main.js"></script>
 
     <body id="bodyMain" onload="initLoading();" style="background-color: #666666">
 
