--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         a:focus{outline:none;-moz-outline:none;}
         em,strong{font-weight: normal;font-style: normal;}
         html,body{font: 14px/20px "5B8B4F53";height: 100%;overflow:hidden;background:#000;}
-        .wrap{background: url(images/inputTxt.png) repeat;background-size:cover;width: 266px;height:307px;position: absolute;left: 50%;top: 50%;margin: -153px 0 0 -128px;}
+        .wrap{background: url(/static/images/inputTxt.png) repeat;background-size:cover;width: 266px;height:307px;position: absolute;left: 50%;top: 50%;margin: -153px 0 0 -128px;}
         .w_txt,.w_btn{border: 0 none;background:0 none;width: 230px;height: 40px;position: absolute;top: 168px;left: 50%;margin-left: -115px;text-indent: 8px;}
         .w_btn{display: block;top: 225px;height: 60px;}
     </style>
