--- a/dipingxian/index.html
+++ b/dipingxian/index.html
@@ -29,7 +29,7 @@
 			overflow: hidden;
 			touch-action: none;
 			-ms-touch-action: none;
-			background-image: url('/static/images/bg1.png'); 
+			background-image: url('./images/bg1.png'); 
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			height: 100%;
@@ -68,7 +68,7 @@
 			<a href="http://www.google.com/chromeframe">Google Chrome Frame for Internet Explorer</a><br/></h1>
 		</canvas>
 		<div class="loading">
-			<img src="/static/images/loading.gif" />
+			<img src="./images/loading.gif" />
 		</div>
 	</div>
 	
@@ -76,7 +76,7 @@
 	<!-- Pages load faster with scripts at the bottom -->
 	
 	<!-- Construct 2 exported games require jQuery. -->
-	<script src="/static/jquery-2.1.1.min.js"></script>
+	<script src="jquery-2.1.1.min.js"></script>
 
 	<script>
 	// Issue a warning if trying to preview an exported project on disk.
@@ -90,7 +90,7 @@
 	
     <!-- The runtime script.  You can rename it, but don't forget to rename the reference here as well.
     This file will have been minified and obfuscated if you enabled "Minify script" during export. -->
-	<script src="/static/c2runtime.js"></script>
+	<script src="c2runtime.js"></script>
 
     <script>
 		// Start the Construct 2 project running on window load.
