--- a/dipingxian/index.html
+++ b/dipingxian/index.html
@@ -29,7 +29,7 @@
 			overflow: hidden;
 			touch-action: none;
 			-ms-touch-action: none;
-			background-image: url('./images/bg1.png'); 
+			background-image: url('./images/bg_n.png'); 
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			height: 100%;
