--- a/dipingxian/index.html
+++ b/dipingxian/index.html
@@ -29,7 +29,7 @@
 			overflow: hidden;
 			touch-action: none;
 			-ms-touch-action: none;
-			background-image: url('./images/bg_n.png'); 
+			background-image: url('./images/bg1.png'); 
 			background-size: 100% 100%;
 			background-repeat: no-repeat;
 			height: 100%;
@@ -42,6 +42,7 @@
 		}
 		.loading{
 			position: absolute;left: 45%;top: 60%;width: 100%;height: 100%;z-index: 100;
+			display: none;
 		}
     </style>
 	
